<resources>
    <string name="app_name">Birthday Reminder</string>

    <string name="action_db">Backup &amp; Restore</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate App</string>

    <string name="action_help_message">Click people to edit them !\nLong click people to see their horoscope !</string>

    <string name="about_title_simplebirthdayreminder">Simple Birthday Reminder</string>
    <string name="about_simplebirthdayreminder">This mobile application designed and coded by Emre Baran. Some icons and graphs have CC-BY License. Some of them are free for personal and commercial use. And a few of them are designed by Emre Baran.</string>
    <string name="about_title_special_thanks">Special Thanks</string>
    <string name="about_special_thanks">Ravi Tamada : for SQLite example.\nVan Quan Nguyen: for Backup example.\nBurak Yıldırım : for beta testing and sharing your ideas.</string>
    <string name="about_title_application">About Application</string>
    <string name="about_application">This application is open-source software. You can find the source codes on GitHub: mree58 \nFeel free to contact if you have any ideas or problems with application. Mail: emrebaran.ceng@gmail.com</string>
    <string name="about_title_permissions">About Permissions</string>
    <string name="about_permissions">WAKE_LOCK: for alarm, let you inform about incoming birthdays</string>
    <!--\nWRITE_EXTERNAL_STORAGE: for backup your database\nREAD_EXTERNAL_STORAGE: for restore your database -->
    <string name="about_application_version">Application Version: 1.3.0</string>
    <string name="about_supported_languages">Supported Languages: English, Türkçe</string>


    <string name="popup_edt_name">Name</string>
    <string name="popup_edt_surname">Surname</string>

    <string name="switch_on">Yes</string>
    <string name="switch_off">No</string>

    <string name="warning_name">Name cannot be blank !</string>
    <string name="warning_surname">Surname cannot be blank !</string>

    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="horoscope1">Capricorn</string>
    <string name="horoscope2">Aquarius</string>
    <string name="horoscope3">Pisces</string>
    <string name="horoscope4">Aries</string>
    <string name="horoscope5">Taurus</string>
    <string name="horoscope6">Gemini</string>
    <string name="horoscope7">Cancer</string>
    <string name="horoscope8">Leo</string>
    <string name="horoscope9">Virgo</string>
    <string name="horoscope10">Libra</string>
    <string name="horoscope11">Scorpio</string>
    <string name="horoscope12">Sagittarius</string>



    <string name="header_name">Name</string>
    <string name="header_surname">Surname</string>
    <string name="header_birthday">Birthdate</string>
    <string name="header_age">Age</string>
    <string name="header_daysleft">Days\nLeft</string>

    <string name="notify_birthday1">Birthday</string>
    <string name="notify_birthday2">Birthday Is Coming</string>
    <string name="notify_birthday3">Dont Forget To Celebrate !</string>

    <string name="alarm_cancelled">Alarm Cancelled !</string>
    <string name="alarm_set">Alarm is set</string>
    <string name="alarm_error">Alarm is null !</string>

    <string name="delete_person">Are you sure you want to delete this people ?</string>

    <string name="edit_person_warning">Update failed  !</string>

    <string name="birth_date">Birthdate :</string>
    <string name="alarm_question">Set reminder ?</string>

    <string name="app_exit">Press Again To Exit</string>

    <string name="exportDb">Backup</string>
    <string name="importDb">Restore</string>

    <string name="export_warning">There is no data to backup !</string>

    <string name="backup_question">Restoring may you lose current data and alarms !</string>
    <string name="backup_before_import">Do you want backup current database before import an old one ?</string>
    <string name="backup_current_file">Backup Current Database</string>
    <string name="backup_select_file">Select Backup File</string>
    <string name="backup_empty">Backup file is empty !</string>
    <string name="backup_import_error">Error import !</string>
    <string name="backup_export_error">Error backup !</string>
    <string name="backup_load_error">Error load file !</string>
    <string name="backup_importing_dialog">Importing ...</string>
    <string name="backup_import_success">Restore succeeded</string>
    <string name="backup_export_success">Backup succeeded</string>


    <string name="permissions_title">Need Permissions !</string>
    <string name="permissions_message">This app needs Storage permissions for exporting and importing database.</string>
    <string name="permissions_grant">Grant</string>
    <string name="permissions_cancel">Cancel</string>
    <string name="permissions_goto">Go to Permissions to Grant Storage</string>
    <string name="permissions_unable">Unable to get Permission</string>



</resources>
